Fixed a bunch of potential NPEs, close issues and made sure admin is not denied access to properties.